Git Tests/force-app/main/default/default/objects/Product2/fields/CadastranteFator__c.field-meta.xml
<CustomField>
    <fullName>CadastranteFator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadastrante do Fator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProdutoCadastrado</relationshipName>
    <type>Lookup</type>
</CustomField>