Git Tests/force-app/main/default/default/objects/Product2/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>