Git Tests/force-app/main/default/default/objects/Product2/fields/CategoriaAnvisa__c.field-meta.xml
<CustomField>
    <fullName>CategoriaAnvisa__c</fullName>
    <label>Categoria Anvisa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>