Git Tests/force-app/main/default/default/objects/Product2/fields/Cest__c.field-meta.xml
<CustomField>
    <fullName>Cest__c</fullName>
    <label>Cest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>