Git Tests/force-app/main/default/default/objects/Product2/fields/Classe__c.field-meta.xml
<CustomField>
    <fullName>Classe__c</fullName>
    <label>Classe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>