Git Tests/force-app/main/default/default/objects/Product2/fields/DescricaoTecnica__c.field-meta.xml
<CustomField>
    <fullName>DescricaoTecnica__c</fullName>
    <label>Descrição técnica</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>