Git Tests/force-app/main/default/default/objects/Product2/fields/DescriptionQueryable__c.field-meta.xml
<CustomField>
    <fullName>DescriptionQueryable__c</fullName>
    <description>Permite que se possa utilizar a descrição como filtro em pesquisa, em seus primeiros 255 caracteres.</description>
    <formula>LEFT(Description, 255)</formula>
    <label>Descrição</label>
    <type>Text</type>
</CustomField>