Git Tests/force-app/main/default/default/objects/Product2/fields/EANProduto__c.field-meta.xml
<CustomField>
    <fullName>EANProduto__c</fullName>
    <label>EAN do produto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>