Git Tests/force-app/main/default/default/objects/Product2/fields/Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Fabricante__c</fullName>
    <label>Fabricante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>