Git Tests/force-app/main/default/default/objects/Product2/fields/FatorConversaoData__c.field-meta.xml
<CustomField>
    <fullName>FatorConversaoData__c</fullName>
    <label>Data/Hora Cadastro do Fator</label>
    <type>DateTime</type>
</CustomField>