Git Tests/force-app/main/default/default/objects/Product2/fields/FatorConversaoPortal__c.field-meta.xml
<CustomField>
    <fullName>FatorConversaoPortal__c</fullName>
    <label>FatorConversaoPortal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>