Git Tests/force-app/main/default/default/objects/Product2/fields/ImagemProduto__c.field-meta.xml
<CustomField>
    <fullName>ImagemProduto__c</fullName>
    <formula>IMAGE(DisplayUrl , &apos;ProductImage&apos;, 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem do produto</label>
    <type>Text</type>
</CustomField>