Git Tests/force-app/main/default/default/objects/Product2/fields/IsActiveElfa__c.field-meta.xml
<CustomField>
    <fullName>IsActiveElfa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo Elfa?</label>
    <type>Checkbox</type>
</CustomField>