Git Tests/force-app/main/default/default/objects/Product2/fields/Lancamento__c.field-meta.xml
<CustomField>
    <fullName>Lancamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lançamento</label>
    <type>Checkbox</type>
</CustomField>