Git Tests/force-app/main/default/default/objects/Product2/fields/LinhaMedicamento__c.field-meta.xml
<CustomField>
    <fullName>LinhaMedicamento__c</fullName>
    <label>Linha do medicamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>