Git Tests/force-app/main/default/default/objects/Product2/fields/MedicamentoControlado__c.field-meta.xml
<CustomField>
    <fullName>MedicamentoControlado__c</fullName>
    <label>Medicamento controlado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SimNao</valueSetName>
    </valueSet>
</CustomField>