Git Tests/force-app/main/default/default/objects/Product2/fields/NCMCapitulo__c.field-meta.xml
<CustomField>
    <fullName>NCMCapitulo__c</fullName>
    <label>NCM - Capítulo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>