Git Tests/force-app/main/default/default/objects/Product2/fields/NCMItem__c.field-meta.xml
<CustomField>
    <fullName>NCMItem__c</fullName>
    <label>NCM - Item</label>
    <length>1</length>
    <type>Text</type>
</CustomField>