Git Tests/force-app/main/default/default/objects/Product2/fields/NCMPosicao__c.field-meta.xml
<CustomField>
    <fullName>NCMPosicao__c</fullName>
    <label>NCM - Posição</label>
    <length>22</length>
    <type>Text</type>
</CustomField>