Git Tests/force-app/main/default/default/objects/Product2/fields/NCMSubitem__c.field-meta.xml
<CustomField>
    <fullName>NCMSubitem__c</fullName>
    <label>NCM - Subitem</label>
    <length>1</length>
    <type>Text</type>
</CustomField>