Git Tests/force-app/main/default/default/objects/Product2/fields/NCMSubposicao__c.field-meta.xml
<CustomField>
    <fullName>NCMSubposicao__c</fullName>
    <label>NCM - Subposição</label>
    <length>2</length>
    <type>Text</type>
</CustomField>