Git Tests/force-app/main/default/default/objects/Product2/fields/Nomefornecedor__c.field-meta.xml
<CustomField>
    <fullName>Nomefornecedor__c</fullName>
    <formula>Fornecedor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome fornecedor</label>
    <type>Text</type>
</CustomField>