Git Tests/force-app/main/default/default/objects/Product2/fields/NumeroAnvisa__c.field-meta.xml
<CustomField>
    <fullName>NumeroAnvisa__c</fullName>
    <label>Número da Anvisa</label>
    <length>25</length>
    <type>Text</type>
</CustomField>