Git Tests/force-app/main/default/default/objects/Product2/fields/NumeroAnvisaApresentacoes__c.field-meta.xml
<CustomField>
    <fullName>NumeroAnvisaApresentacoes__c</fullName>
    <label>Número da Anvisa - Núm. apresentações</label>
    <length>3</length>
    <type>Text</type>
</CustomField>