Git Tests/force-app/main/default/default/objects/Product2/fields/NumeroAnvisaAutorizacaoFederal__c.field-meta.xml
<CustomField>
    <fullName>NumeroAnvisaAutorizacaoFederal__c</fullName>
    <label>Número da Anvisa - Autorização federal</label>
    <length>4</length>
    <type>Text</type>
</CustomField>