Git Tests/force-app/main/default/default/objects/Product2/fields/NumeroAnvisaDigitoVerificador__c.field-meta.xml
<CustomField>
    <fullName>NumeroAnvisaDigitoVerificador__c</fullName>
    <label>Número da Anvisa - Dígito verificador</label>
    <length>1</length>
    <type>Text</type>
</CustomField>