Git Tests/force-app/main/default/default/objects/Product2/fields/NumeroAnvisaOrdemRegistro__c.field-meta.xml
<CustomField>
    <fullName>NumeroAnvisaOrdemRegistro__c</fullName>
    <label>Número da Anvisa - Ordem do registro</label>
    <length>4</length>
    <type>Text</type>
</CustomField>