Git Tests/force-app/main/default/default/objects/Product2/fields/NumeroAnvisaTipoRegistro__c.field-meta.xml
<CustomField>
    <fullName>NumeroAnvisaTipoRegistro__c</fullName>
    <label>Número da Anvisa - Tipo do registro</label>
    <length>1</length>
    <type>Text</type>
</CustomField>