Git Tests/force-app/main/default/default/objects/Product2/fields/ProductCodeElfa__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeElfa__c</fullName>
    <externalId>true</externalId>
    <label>Código do produto Elfa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>