Git Tests/force-app/main/default/default/objects/Product2/fields/SegundaUnidade__c.field-meta.xml
<CustomField>
    <fullName>SegundaUnidade__c</fullName>
    <label>Segunda unidade</label>
    <length>2</length>
    <type>Text</type>
</CustomField>