Git Tests/force-app/main/default/default/objects/Product2/fields/Subcategoria__c.field-meta.xml
<CustomField>
    <fullName>Subcategoria__c</fullName>
    <label>Subcategoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>