Git Tests/force-app/main/default/default/objects/Product2/fields/Subgrupo__c.field-meta.xml
<CustomField>
    <fullName>Subgrupo__c</fullName>
    <label>Subgrupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>