Git Tests/force-app/main/default/default/objects/Product2/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>