Git Tests/force-app/main/default/default/objects/Product2/fields/TipoConversao__c.field-meta.xml
<CustomField>
    <fullName>TipoConversao__c</fullName>
    <label>Tipo de conversão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Multiplicação</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Divisão</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Nenhuma</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>