Git Tests/force-app/main/default/default/objects/Product2/fields/UnidadeMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedida__c</fullName>
    <label>Unidade de medida</label>
    <length>2</length>
    <type>Text</type>
</CustomField>